--- a/figma-fim/src/Components/Layouts/styles.module.css
+++ b/figma-fim/src/Components/Layouts/styles.module.css
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin:0,45px;
+    align-items: center;
+    margin:0 45px;
     padding: 22.5px;
+    height: 50px;
+    border-radius:5px;
   }
